--- a/.gitattributes
+++ b/.gitattributes
@@ -13,5 +13,6 @@
 /apertium-scn.scn.rlx -text
 /autogen.sh -text
 /configure.ac -text
+dev/words_to_add -text
 /modes.xml -text
 /scn.prob -text svneol=unset#unset
