--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,8 @@
 dev/words_to_add -text
 /modes.xml -text
 /scn.prob -text svneol=unset#unset
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
