--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,7 @@ TARGETS_COMMON =			\
 	$(LANG1).autogen.bin		\
 	$(LANG1).autogen.att.gz		\
 	$(LANG1).autopgen.bin		\
+	$(LANG1).prob		\
 	$(LANG1).rlx.bin
 
 # This include defines goals for install-modes, .deps/.d, autobil.prefixes and .mode files:
@@ -45,6 +46,9 @@ $(LANG1).autopgen.bin: $(BASENAME).post-$(LANG1).dix
 
 $(LANG1).rlx.bin: $(BASENAME).$(LANG1).rlx $(CGCOMP)
 	$(CGCOMP) $< $@
+
+$(LANG1).prob: $(BASENAME).$(LANG1).tagged
+	apertium-tagger -s 0 -u 1 $@ $<
 
 ###############################################################################
 ## Distribution
