--- a/.gitattributes
+++ b/.gitattributes
@@ -15,7 +15,7 @@
 /configure.ac -text
 dev/words_to_add -text
 /modes.xml -text
-/scn.prob -text svneol=unset#unset
+*.prob binary
 *.dix linguist-language=XML linguist-detectable=true
 *.lrx linguist-language=XML linguist-detectable=true
 *.lsx linguist-language=XML linguist-detectable=true
